zot-registry/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: zot-registry
    app.kubernetes.io/name: zot
    app.kubernetes.io/version: v2.1.11
  name: zot-registry
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: zot-registry
      app.kubernetes.io/name: zot
  strategy:
    #rollingUpdate:
    #  maxSurge: 25%
    #  maxUnavailable: 25%
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: zot-registry
        app.kubernetes.io/name: zot
    spec:
      containers:
        - image: ghcr.io/project-zot/zot:v2.1.15
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /livez
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: zot
          args:
            - serve
            - /etc/zot/config.json
          ports:
            - containerPort: 5000
              name: zot
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /startupz
              port: 5000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/lib/registry
              name: data
            - mountPath: /etc/zot
              name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: zot-registry
      serviceAccountName: zot-registry
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zot-registry-pvc
        - name: config
          configMap:
            name: zot-registry-config
