zot-registry/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: zot-registry
    app.kubernetes.io/name: zot
  name: zot-registry-svc
spec:
  selector:
    app.kubernetes.io/instance: zot-registry
    app.kubernetes.io/name: zot
  ports:
    - name: zot
      port: 5000
      protocol: TCP
