zot-registry/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelab-https-route
spec:
  parentRefs:
  - name: homelab-gateway
    sectionName: https
    namespace: gateway
  
  hostnames:
  - "registry.nauvis.lan" 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: zot-registry-svc
      port: 5000
